[project]
name = "dive_into_javascript"
version = "0.0.1"
description = "深入了解 JS。"
authors = [{ name = "songbinghui", email = "soongbinghui@gmail.com" }]
dependencies = ["jupyterlab>=4.2.0"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.scripts]
dev = "jupyter lab"
